# legacy_autonomous_car_description

./: README.md
autonomous_car_description/: CMakeLists.txt  package.xml
autonomous_car_description/config/: controllers.yaml
autonomous_car_description/launch/: autonomous_car.launch  autonomous_car_gazebo.launch  autonomous_car_rviz.launch  autonomous_car_spawn.launch  autonomous_car_test.launch  autonomous_car_world.launch
autonomous_car_description/models/race_track/: model.config  model.sdf
autonomous_car_description/models/race_track/materials/scripts/: race_track.material
autonomous_car_description/models/traffic_cone_100cm_001/: model.config  model.sdf
autonomous_car_description/models/traffic_cone_100cm_001/meshes/: Traffic_Cone_100cm.DAE
autonomous_car_description/models/traffic_cone_75cm_001/: model.config  model.sdf
autonomous_car_description/models/traffic_cone_75cm_001/meshes/: Traffic_Cone_75cm.dae
autonomous_car_description/src/: AutonomousCarEncoder.cpp  AutonomousCarPlugin.cpp  AutonomousCarPlugin.hh  Autonomous_Car_Gazebo_Plugin.cpp
autonomous_car_description/urdf/: autonomous_car.urdf  autonomous_car.xacro  autonomous_car_functions.xacro  autonomous_car_gazebo.xacro  autonomous_car_joints.xacro  autonomous_car_materials.xacro  autonomous_car_physical.xacro  autonomous_car_transmissions.xacro
autonomous_car_description/worlds/: autonomous_car.world  autonomous_car_temp.world  autonomous_car_temp_002.world
